# Advanced-Analytics-Projects

./: .gitignore  Catboost.ipynb  Catboost_(2).ipynb  README.md  pyproject.toml  run_tabpfn_local.py
Assignment 1/: 1.1 Data clean split.ipynb  EDA-Chloe.ipynb  EDA_feature_engineering.ipynb  FloModel.ipynb  FloModels_not_that_clean.ipynb  Lab report group 21.ipynb  Model1603.100realnofake.ipynb  MyBestModel.ipynb  data_clean_split.ipynb  glm.ipynb  hurdle_model.ipynb  lightgbm.ipynb  two_classifier.ipynb
Assignment 1/data/: leaderboard_submission.csv  test_final.csv  train_targets.csv  valid_final.csv  valid_targets.csv
Assignment 1/results/: lightgbm_predictions_1.csv  two_hurdle_predictions_1.csv
Assignment 2/: Assignment 2 - log of attempts.docx  ResNet_classifier.ipynb  preprocessing.ipynb  utils.py
Assignment 2/data/: test_data.csv  (+2 more)
Assignment 3/: build_embeddings.ipynb  build_index.py  build_retrieval_texts.ipynb  inspect_db.py  pyproject.toml  recommender.py  steam_sqlite.py  styles.css  test_dev.py
Assignment 3/3.1 Model 1/: recommender.py  steam_sqlite.py
Assignment 3/3.1 Model 2/: build review summaries.ipynb  eda assignment 3.ipynb  game_app_ids.npy
Assignment 3/3.1 Model 4/: utils.py
Assignment 3/3.1 Model 4/templates/: index.html
Assignment 3/3.2 Model 2/: app.js  build_retrieval_texts.ipynb  index.html
Assignment 3/3.3 Final model (3)/rag/: README.md
Assignment 3/3.4 Model 4/: config.py  query_parser.py  recommender.py  scoring.py
Assignment 3/3.4 Model 4/static/: app.js
Assignment 3/rag/: README.md  Raglooker.html  recommender.py
