[project]
name = "raglooker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.7",
    "numpy>=2.4.3",
    "ollama>=0.6.0",
    "pandas>=2.3.3",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.4.1",
]
